plugins {
    id 'java'
    id 'io.quarkus' version '3.28.4'
    id 'checkstyle'
    id 'pmd'
    id 'com.diffplug.spotless' version '7.0.2'
    id 'net.ltgt.errorprone' version '5.1.0'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-arc'

    // Hibernate Reactive with Panache（リアクティブJPA実装）
    implementation 'io.quarkus:quarkus-hibernate-reactive-panache'
    implementation 'io.quarkus:quarkus-reactive-pg-client'

    // Flyway（データベースマイグレーション）
    implementation 'io.quarkus:quarkus-flyway'
    implementation 'io.quarkus:quarkus-jdbc-postgresql'

    // Mutiny（Reactive Streamsライブラリ - quarkus-hibernate-reactive-panacheに含まれる）
    implementation 'io.smallrye.reactive:mutiny'

    // Hibernate Validator（Jakarta Bean Validation実装）
    implementation 'io.quarkus:quarkus-hibernate-validator'

    // UUID v7生成用（業務IDに使用）
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'

    // JSpecify（nullability annotations）
    compileOnly 'org.jspecify:jspecify:1.0.0'

    // Lombok（Java 25対応版）- @Withによる不変更新パターン、@Getter/@Setter等に使用
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    // Apache Commons
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0-M2'

    implementation 'io.github.lambig:toolbox-java:0.3.1'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.quarkus:quarkus-test-vertx'
    testImplementation 'io.rest-assured:rest-assured'
    testImplementation 'org.assertj:assertj-core:3.27.1'

    // ArchUnit（アーキテクチャ制約の強制。レイヤー/依存/命名ルールをテストで検証）
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.2'

    // NullAway（コンパイル時 null 安全チェッカ。ErrorProne プラグインとして動作）。
    // バージョン固定の理由: NullAway は ErrorProne 内部 API に密結合するため両者を揃える。
    // nullaway 0.12.7（最新）は error_prone_core 2.39.0 に対応。最新の 2.50.0 は API 変更で非互換。
    // 昇格トリガ: NullAway が error_prone_core 2.50 系対応版を出したら両者を bump する。
    errorprone 'com.google.errorprone:error_prone_core:2.39.0'
    errorprone 'com.uber.nullaway:nullaway:0.12.7'
}

group = 'com.abservice'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

test {
    useJUnitPlatform()
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'

    // NullAway: @NullMarked なコードのみを対象にコンパイル時 null 安全を強制する。
    // OnlyNullMarked=true により未マークのパッケージは対象外＝package-info を追加した
    // パッケージから段階的に enforce できる。他の ErrorProne チェックは無効化。
    // JPA エンティティ（Hibernate がリフレクションで設定）は初期化検査から除外。
    options.errorprone {
        disableAllChecks = true
        check('NullAway', net.ltgt.gradle.errorprone.CheckSeverity.ERROR)
        option('NullAway:OnlyNullMarked', 'true')
        option('NullAway:JSpecifyMode', 'true')
        option('NullAway:ExcludedClassAnnotations',
                'jakarta.persistence.Entity,jakarta.persistence.MappedSuperclass,jakarta.persistence.Embeddable')
    }
    // ErrorProne は JDK 16+ で javac 内部 API へのアクセスに exports/opens が要る（JEP 396）。
    options.forkOptions.jvmArgs += [
        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
    ]
}

// NullAway は本番コード（main）にのみ適用する。test/integrationTest では無効化。
tasks.named('compileTestJava') { options.errorprone.enabled = false }
tasks.matching { it.name == 'compileIntegrationTestJava' }.configureEach {
    options.errorprone.enabled = false
}

compileTestJava {
    options.encoding = 'UTF-8'
}

// ================================================================================
// Code Quality Configuration
// ================================================================================

// Checkstyle: Java code style checker
checkstyle {
    toolVersion = '10.20.2'
    configFile = file("${projectDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = false  // Fail build on checkstyle violations
    maxWarnings = 0  // Don't allow any warnings
    showViolations = true
}

tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required = true
        html.required = true
    }
}

// PMD: Static analysis with custom rules only
pmd {
    toolVersion = '7.16.0'
    ruleSetFiles = files("${projectDir}/config/pmd/ruleset.xml")
    ruleSets = []
    consoleOutput = true
    ignoreFailures = false
}

// production 限定ルール（SingleUseLocalVariable 等）はテスト系ソースセットでは除外する。
// ruleset.xml を単一ソースとして参照し、テスト向けに当該ルールのみ除外した ruleset を
// インライン生成する（絶対パス ref を gradle 側で補間。ref 解決失敗時に PMD が無警告で
// 空解析に落ちるのを避けるため、相対 ref ではなく絶対パスを用いる）。
tasks.matching { it.name in ['pmdTest', 'pmdIntegrationTest'] }.configureEach {
    final def baseRuleset = file("${projectDir}/config/pmd/ruleset.xml").absolutePath
    ruleSetFiles = files()
    ruleSetConfig = resources.text.fromString("""<?xml version="1.0" encoding="UTF-8"?>
<ruleset name="ABService Test Rules"
         xmlns="http://pmd.sourceforge.net/ruleset/2.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://pmd.sourceforge.net/ruleset/2.0.0 https://pmd.sourceforge.io/ruleset_2_0_0.xsd">
    <description>テスト向け。ruleset.xml を全参照し production 限定ルールのみ除外する。</description>
    <rule ref="${baseRuleset}">
        <exclude name="SingleUseLocalVariable"/>
    </rule>
</ruleset>
""")
}

// Spotless: Code formatter
spotless {
    java {
        target 'src/**/*.java'
        // Use Eclipse JDT formatter for Java 25 compatibility
        eclipse('4.32').configFile("${projectDir}/config/spotless/eclipse-formatter.xml")
        removeUnusedImports()
        trimTrailingWhitespace()
        replaceRegex 'Remove tabs', '\t', '    '  // タブを4スペースに変換
        endWithNewline()
    }
}

// Integrate code quality checks into the build lifecycle
tasks.named('check') {
    dependsOn 'checkstyleMain', 'checkstyleTest', 'spotlessCheck'
}

// Ensure formatting is done before build
tasks.named('build') {
    dependsOn 'spotlessApply'
}

// ================================================================================
// Integration Test Configuration
// ================================================================================

sourceSets {
    integrationTest {
        java {
            srcDir 'src/integrationTest/java'
        }
        resources {
            srcDir 'src/integrationTest/resources'
        }
        compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }
}

// Set duplicate handling strategy for resource processing
tasks.withType(ProcessResources) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Integration test task (requires database)
task integrationTest(type: Test) {
    description = 'Run integration tests with database'
    group = 'verification'

    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath

    useJUnitPlatform()
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    // DB connection wait timeout
    systemProperty 'quarkus.test.wait-time', 'PT30S'

    shouldRunAfter test
}

// Update test task to exclude integration tests
tasks.named('test') {
    // Exclude integration tests from unit test execution
    exclude '**/*IntegrationTest.class'
    exclude '**/*RepositoryTest.class'
}

// Run both unit and integration tests in CI
check {
    dependsOn integrationTest
}
